--- a/lab01/Makefile
+++ b/lab01/Makefile
@@ -1,6 +1,6 @@
 objdir = bin
 objs = $(addprefix $(objdir)/,main.o balloc.o)
-CFLAGS = -O0 -ggdb
+CFLAGS = -O0 -ggdb -Wall -Werror -ansi -pedantic
 
 lab12: $(objs)
 	$(CC) -o $(objdir)/lab12 $(objs)
