--- a/lab01/Makefile
+++ b/lab01/Makefile
@@ -1,12 +1,2 @@
-objdir = bin
-objs = $(addprefix $(objdir)/,main.o balloc.o)
-CFLAGS = -O0 -ggdb -Wall -Werror -ansi -pedantic
-
-lab12: $(objs)
-	$(CC) -o $(objdir)/lab12 $(objs)
-
-bin/%.o : %.c
-	$(CC) -c $(CFLAGS) $< -o $@
-
-clean:
-	rm -f bin/*
+compile: balloc.h main.h balloc.c main.c
+	gcc main.c -o main
