--- a/lab03/Makefile
+++ b/lab03/Makefile
@@ -1,9 +1,12 @@
 objdir = bin
-objs = $(addprefix $(objdir)/,principal.o balloc.o grandeint.o lista.o)
+objs = $(addprefix $(objdir)/, balloc.o grandeint.o lista.o)
 CFLAGS = -O0 -ggdb -Wall # -Werror -ansi -pedantic
 
-lab03: $(objs)
-	$(CC) -o $(objdir)/lab03 $(objs)
+lab03: $(objs) bin/principal.o
+	$(CC) -o $(objdir)/lab03 $(objs) bin/principal.o
+
+testa: $(objs) bin/testa.o
+	$(CC) -o $(objdir)/testa $(objs) bin/testa.o
 
 bin/%.o : %.c
 	$(CC) -c $(CFLAGS) $< -o $@
