--- a/lab03/Makefile
+++ b/lab03/Makefile
@@ -1,9 +1,10 @@
+
 objdir = bin
 objs = $(addprefix $(objdir)/, balloc.o grandeint.o lista.o)
-CFLAGS = -O0 -ggdb -Wall -pg # -Werror -ansi -pedantic
+CFLAGS = -O0 -ggdb -Wall # -Werror -ansi -pedantic
 
 lab03: $(objs) bin/principal.o
-	$(CC) -pg -o $(objdir)/lab03 $(objs) bin/principal.o
+	$(CC) -o $(objdir)/lab03 $(objs) bin/principal.o
 
 testa: $(objs) bin/testa.o
 	$(CC) -o $(objdir)/testa $(objs) bin/testa.o
