Nome com alocação dinâmica.

--- a/lab07/Makefile
+++ b/lab07/Makefile
@@ -1,7 +1,6 @@
-
 objdir = bin
 objs = $(addprefix $(objdir)/, main.o arvoreb.o)
-CFLAGS = -O0 -ggdb3 -Wall -std=c99 -Werror -pedantic
+CFLAGS = -O0 -ggdb3 -Wall -std=c99 -pedantic
 
 lab07: $(objs) bin/main.o
 	$(CC) -o $(objdir)/lab06 $(objs) 
